<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gururaj.pricetracker.AddItemActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
        android:id="@+id/tv_item_name"
        android:layout_height="wrap_content"
            android:layout_width="0dp"
        android:layout_weight="2"
        android:text="@string/what"
        android:padding="20dp"
        android:textSize="20sp"/>

        <AutoCompleteTextView
            android:id="@+id/et_item_name"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:inputType="textCapSentences"
            android:hint="@string/hint_what"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/where"
            android:padding="20dp"
            android:textSize="20sp"/>

        <AutoCompleteTextView
            android:id="@+id/et_shop_name"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:hint="@string/hint_where"
            android:inputType="textCapSentences"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:padding="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_price"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:padding="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_height="match_parent"
            android:focusable="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_item"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/add_item"/>
</LinearLayout>
