<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gururaj.pricetracker.ShowItemEntryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_tag"
            android:text="@string/item_tag"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_shop_tag"
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:text="@string/shop_tag"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price_tag"
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/price_tag"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_price_name"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_tag"
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:text="@string/date_tag"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_date_name"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>
