<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gururaj.pricetracker.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_no_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no_items_to_display"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout_Items">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textStyle="normal"
                    android:gravity="start"
                    android:text="@string/item_tag"/>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/avg_price"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_listofitems"
                android:background="@drawable/background_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:src="@drawable/ic_action_add"
            android:clickable="true"
            />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
